grammars/tree-sitter-javaswing/grammar.js
    program: $ => repeat($._toplevel_statement),

    _toplevel_statement: $ => choice(
      $.statement,
      $.javaswing_event_handler,
      $.javaswing_init_components,
      $.method_declaration,
    ),

    // Literals

    decimal_integer_literal: _ => token(seq(
      DIGITS,
      optional(choice('l', 'L')),
    )),

    string_literal: $ => choice($._string_literal, $._multiline_string_literal),
    _string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_fragment,
        $.escape_sequence,
        $.string_interpolation,
      )),
      '"',
    ),
    _multiline_string_literal: $ => seq(
      '"""',
      repeat(choice(
        alias($._multiline_string_fragment, $.multiline_string_fragment),
        $._escape_sequence,
        $.string_interpolation,
      )),
      '"""',
    ),
    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token() constructs containing a regexp
    // so as to obtain a node in the CST.

    string_fragment: _ => token.immediate(prec(1, /[^"\\]+/)),
    null_literal: _ => 'null',

    // Expressions

    assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      field('left', choice(
        $.identifier,
        $._reserved_identifier,
        $.field_access,
        $.array_access,
      )),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '&=', '|=', '^=', '%=', '<<=', '>>=', '>>>=')),
      field('right', $.expression),
    )),

    parenthesized_expression: $ => seq('(', $.expression, ')'),

    object_creation_expression: $ => choice(
      $.javaswing_dialog_creation,
      $.javaswing_button_group_creation,
      $.javaswing_combo_box_creation,
      $.javaswing_item_model_creation,
      $.javaswing_cell_renderer_editor_creation,
      $.javaswing_toolbar_creation,
      $.javaswing_progress_bar_creation,
      $.javaswing_separator_creation,
      $.javaswing_list_creation,
      $.javaswing_scroll_bar_creation,
      $.javaswing_text_editor_creation,
      $.javaswing_password_field_creation,
      $.javaswing_formatted_text_field_creation,
      $.javaswing_text_input_creation,
      $.javaswing_selectable_button_creation,
      $.javaswing_spinner_creation,
      $.javaswing_spinner_model_creation,
      $.javaswing_grid_bag_constraints_creation,
      $.javaswing_insets_creation,
      $.javaswing_dimension_creation,
      $.javaswing_action_structure,
      $.javaswing_timer_structure,
      $.javaswing_swing_worker_creation,
      $.javaswing_document_creation,
      $.javaswing_transfer_handler_creation,
      $.javaswing_component_creation,
      $.javaswing_border_creation,
      $._unqualified_object_creation_expression,
      seq($.primary_expression, '.', $._unqualified_object_creation_expression),
    ),

    _unqualified_object_creation_expression: $ => prec.right(seq(
      'new',
      choice(
        seq(
          repeat($._annotation),
          field('type_arguments', $.type_arguments),
          repeat($._annotation),
        ),
        repeat($._annotation),
      ),
      field('type', $._simple_type),
      field('arguments', $.argument_list),
      optional($.class_body),
    )),

    field_access: $ => seq(
      field('object', choice($.primary_expression, $.super)),
      optional(seq(
        '.',
        $.super,
      )),
      '.',
      field('field', choice($.identifier, $._reserved_identifier, $.this)),
    ),

    method_invocation: $ => choice(
      $.javaswing_action_command,
      $.javaswing_menu_structure,
      $.javaswing_event_listener,
      $.javaswing_init_components_call,
      $.javaswing_cell_renderer_editor_interaction,
      $.javaswing_progress_bar_interaction,
      $.javaswing_list_selection_interaction,
      $.javaswing_scroll_bar_increment_interaction,
      $.javaswing_scroll_bar_access,
      $.javaswing_text_editor_interaction,
      $.javaswing_formatted_text_field_interaction,
      $.javaswing_text_input_interaction,
      $.javaswing_selectable_button_interaction,
      $.javaswing_combo_box_interaction,
      $.javaswing_table_column_model,
      $.javaswing_scroll_viewport,
      $.javaswing_border_assignment,
      $.javaswing_dialog_interaction,
      $.javaswing_file_chooser_interaction,
      $.javaswing_tabbed_pane_interaction,
      $.javaswing_popup_menu_interaction,
      $.javaswing_split_pane_interaction,
      $.javaswing_item_model_interaction,
      $.javaswing_selection_model_access,
      $._javaswing_generic_show_invocation,
      $.javaswing_table_model_mutation,
      $.javaswing_selection_model,
      $.javaswing_box_factory,
      $.javaswing_bounds_geometry,
      $.javaswing_window_lifecycle,
      $.javaswing_root_pane_structure,
      $.javaswing_keyboard_bindings,
      $.javaswing_action_metadata,
      $.javaswing_document_model,
      $.javaswing_root_pane_extended,
      $.javaswing_threading_invocation,
      $.javaswing_focus_interaction,
      $.javaswing_transfer_handler_interaction,
      $.javaswing_property_setter,
      $.javaswing_layout_assignment,
      $.javaswing_container_add,
      seq(
        choice(
          field('name', $._method_name),
          seq(
            field('object', choice($.primary_expression, $.super)),
            '.',
            optional(seq(
              $.super,
              '.',
            )),
            field('type_arguments', optional($.type_arguments)),
            field('name', $._method_name),
          ),
        ),
        field('arguments', $.argument_list),
      ),
    ),

    javaswing_border_assignment: $ => prec(PREC.OBJ_ACCESS + 2, choice(
      seq(
        field('name', $._javaswing_set_border_method),
        field('arguments', $.javaswing_border_arguments),
      ),
      seq(
        field('component', choice($.primary_expression, $.super)),
        '.',
        field('name', $._javaswing_set_border_method),
        field('arguments', $.javaswing_border_arguments),
      ),
      seq(
        field('name', $._javaswing_set_viewport_border_method),
        field('arguments', $.javaswing_border_arguments),
      ),
      seq(
        field('scroll_pane', choice($.primary_expression, $.super)),
        '.',
        field('name', $._javaswing_set_viewport_border_method),
        field('arguments', $.javaswing_border_arguments),
      ),
      $.javaswing_border_factory_creation,
    )),

    javaswing_border_arguments: $ => prec(PREC.OBJ_ACCESS + 3, seq(
      '(',
      field('border', choice(
        $.javaswing_border_factory_creation,
        $.javaswing_border_creation,
        $.expression,
      )),
      ')',
    )),

    javaswing_border_factory_creation: $ => prec(PREC.OBJ_ACCESS + 3, seq(
      field('factory', choice(
        'BorderFactory',
        token(seq('javax', '.', 'swing', '.', 'BorderFactory')),
      )),
      '.',
      field('name', $._javaswing_border_factory_method),
      field('arguments', $.argument_list),
    )),

    javaswing_border_creation: $ => prec.right(PREC.OBJ_INST + 1, seq(
      'new',
      repeat($._annotation),
      field('type', $.javaswing_border_type),
      field('arguments', $.argument_list),
      optional($.class_body),
    )),

    javaswing_border_type: _ => choice(
      ...JAVASWING_BORDER_TYPES.map(type => type),
    ),

    javaswing_button_group_creation: $ => prec.right(PREC.OBJ_INST + 1, seq(
      'new',
      repeat($._annotation),
      field('type', $.javaswing_button_group_class),
      field('arguments', $.argument_list),
      optional($.class_body),
    )),

    javaswing_button_group_class: _ => choice(
      ...JAVASWING_BUTTON_GROUP_TYPES.map(type => type),
      token(seq('javax', '.', 'swing', '.', 'ButtonGroup')),
    ),

    javaswing_selectable_button_class: _ => choice(
      ...JAVASWING_SELECTABLE_BUTTON_TYPES.map(type => type),
      token(seq('javax', '.', 'swing', '.', choice(...JAVASWING_SELECTABLE_BUTTON_TYPES))),
    ),

    _javaswing_generic_show_invocation: $ => prec(PREC.OBJ_ACCESS + 1, seq(
      field('object', choice($.primary_expression, $.super)),
      '.',
      field('name', $._javaswing_popup_menu_display_method),
      field('arguments', $.argument_list),
    )),

    javaswing_action_command: $ => prec(PREC.OBJ_ACCESS + 2, choice(
      seq(
        field('name', $._javaswing_action_command_setter_method),
        field('arguments', $.javaswing_action_command_arguments),
      ),
      seq(
        field('component', choice($.primary_expression, $.super)),
        '.',
        field('name', $._javaswing_action_command_setter_method),
        field('arguments', $.javaswing_action_command_arguments),
      ),
      seq(
        field('name', $._javaswing_action_command_getter_method),
        field('arguments', $.javaswing_empty_argument_list),
      ),
      seq(
        field('event', choice($.primary_expression, $.super)),
        '.',
        field('name', $._javaswing_action_command_getter_method),
        field('arguments', $.javaswing_empty_argument_list),
      ),
    )),

    javaswing_action_command_arguments: $ => prec(PREC.OBJ_ACCESS + 3, seq(
      '(',
      field('command', $.expression),
      ')',
    )),

    javaswing_empty_argument_list: _ => prec(PREC.OBJ_ACCESS + 3, seq('(', ')')),

    javaswing_action_metadata: $ => prec(PREC.OBJ_ACCESS + 2, choice(
      seq(
        field('action', choice($.primary_expression, $.super)),
        '.',
        field('name', $._javaswing_action_put_value_method),
        field('arguments', $.javaswing_action_put_value_arguments),
      ),
    )),

    javaswing_action_put_value_arguments: $ => seq(
      '(',
      field('key', $.expression),
      ',',
      field('value', $.expression),
      ')',
    ),

    _javaswing_action_put_value_method: _ => 'putValue',

    _javaswing_set_border_method: _ => 'setBorder',

    _javaswing_set_viewport_border_method: _ => 'setViewportBorder',

    _javaswing_border_factory_method: _ => choice(
      ...JAVASWING_BORDER_FACTORY_METHODS.map(method => method),
    ),

    _javaswing_action_command_setter_method: _ => 'setActionCommand',

    _javaswing_action_command_getter_method: _ => 'getActionCommand',

    _method_name: $ => choice(
      $.identifier,
      $._reserved_identifier,
      $._javaswing_container_add_method,
      $._javaswing_get_content_pane_method,
      $._javaswing_set_layout_method,
      $._javaswing_property_setter_method,
      $._javaswing_table_model_mutation_method,
      $._javaswing_event_listener_method,
      $._javaswing_action_command_setter_method,
      $._javaswing_action_command_getter_method,
      $._javaswing_set_border_method,
      $._javaswing_set_viewport_border_method,
      $._javaswing_border_factory_method,
      $._javaswing_box_factory_method,
      $._javaswing_bounds_geometry_method,
      $._javaswing_window_lifecycle_method,
      $._javaswing_root_pane_structure_method,
      $._javaswing_option_pane_dialog_method,
      $._javaswing_option_pane_context_method,
      $._javaswing_dialog_modality_method,
      $._javaswing_file_chooser_dialog_method,
      $._javaswing_file_chooser_selection_method,
      $._javaswing_file_chooser_configuration_method,
      $._javaswing_tabbed_pane_tab_method,
      $._javaswing_tabbed_pane_selection_method,
      $._javaswing_tabbed_pane_lookup_method,
      $._javaswing_tabbed_pane_appearance_method,
      $._javaswing_tabbed_pane_layout_method,
      $._javaswing_split_pane_component_method,
      $._javaswing_split_pane_divider_method,
      $._javaswing_split_pane_orientation_method,
      $._javaswing_scroll_bar_access_method,
      $._javaswing_scroll_bar_increment_method,
      $._javaswing_text_editor_method,
      $._javaswing_combo_box_selection_method,
      $._javaswing_combo_box_popup_method,
      $._javaswing_combo_box_renderer_editor_method,
      $._javaswing_combo_box_display_method,
      $._javaswing_combo_box_item_method,
      $._javaswing_item_model_method,
      $._javaswing_cell_renderer_editor_method,
    ),
    

    argument_list: $ => seq('(', commaSep($.expression), ')'),

    switch_expression: $ => seq(
      'switch',
      field('condition', $.parenthesized_expression),
      field('body', $.switch_block),
    ),

    switch_block: $ => seq(
      '{',
      choice(
        repeat($.switch_block_statement_group),
        repeat($.switch_rule),
      ),
      '}',
    ),

    switch_block_statement_group: $ => prec.left(seq(
      repeat1(seq($.switch_label, ':')),
      repeat($.statement),
    )),

    switch_label: $ => choice(
      seq('case',
        choice(
          $.pattern,
          commaSep1($.expression),
        ),
        optional($.guard),
      ),
      'default',
    ),

    block: $ => seq(
      '{', repeat($.statement), '}',
    ),

    expression_statement: $ => seq(
      $.expression,
      ';',
    ),

    if_statement: $ => prec.right(seq(
      'if',
      field('condition', $.parenthesized_expression),
      field('consequence', $.statement),
      optional(seq('else', field('alternative', $.statement))),
    )),

    _annotation: $ => choice(
      $.marker_annotation,
      $.annotation,
    ),

    class_declaration: $ => seq(
      optional($.modifiers),
      'class',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      optional(field('superclass', $.superclass)),
      optional(field('interfaces', $.super_interfaces)),
      optional(field('permits', $.permits)),
      field('body', $.class_body),
    ),

    modifiers: $ => repeat1(choice(
      $._annotation,
      'public',
      'protected',
      'private',
      'abstract',
      'static',
      'final',
      'strictfp',
      'default',
      'synchronized',
      'native',
      'transient',
      'volatile',
      'sealed',
      'non-sealed',
    )),

    class_body: $ => seq(
      '{',
      repeat($._class_body_declaration),
      '}',
    ),

    _class_body_declaration: $ => choice(
      $.javaswing_event_handler,
      $.javaswing_init_components,
      $.javaswing_swing_worker_callback,
      $.method_declaration,
      $.javaswing_button_group_field,
      $.javaswing_combo_box_field,
      $.javaswing_item_model_field,
      $.javaswing_cell_renderer_editor_field,
      $.javaswing_toolbar_field,
      $.javaswing_progress_bar_field,
      $.javaswing_separator_field,
      $.javaswing_list_field,
      $.javaswing_scroll_bar_field,
      $.javaswing_text_editor_field,
      $.javaswing_password_field_field,
      $.javaswing_formatted_text_field_field,
      $.javaswing_text_input_field,
      $.javaswing_selectable_button_field,
      $.javaswing_spinner_field,
      $.javaswing_spinner_model_field,
      $.javaswing_grid_bag_constraints_field,
      $.javaswing_component_field,
      $.field_declaration,
      $.record_declaration,
      $.compact_constructor_declaration, // For records.
      $.javaswing_screen,
      $.javaswing_selectable_button_class_declaration,
      $.class_declaration,
      $.interface_declaration,
      $.annotation_type_declaration,
      $.enum_declaration,
      $.block,
      $.static_initializer,
      $.constructor_declaration,
      ';',
    ),

    javaswing_button_group_field: $ => prec(PREC.DECL + 1, seq(
      optional($.modifiers),
      field('type', $.javaswing_button_group_class),
      $._variable_declarator_list,
      ';',
    )),

    _variable_declarator_list: $ => commaSep1(
      field('declarator', $.variable_declarator),
    ),

    variable_declarator: $ => seq(
      $._variable_declarator_id,
      optional(seq('=', field('value', $._variable_initializer))),
    ),

    _variable_declarator_id: $ => seq(
      field('name', choice($.identifier, $._reserved_identifier, $.underscore_pattern)),
      field('dimensions', optional($.dimensions)),
    ),

    _variable_initializer: $ => choice(
      $.expression,
      $.array_initializer,
    ),

    void_type: _ => 'void',
